[metadata]
author = Stefan Hagen
author_email = stefan@hagen.link
description = Hypercube (Finnish: hyperkuutio) tool that scratches some itch.
home_page = https://github.com/sthagen/hyperkuutio

keywords =
    csaf
    developer-tools
    validation
    verification

long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Stefan Hagen
maintainer_email = stefan@hagen.link
name = hyperkuutio

project_urls =
    Bug Tracker = https://github.com/sthagen/hyperkuutio/issues
    Documentation = https://sthagen.github.io/hyperkuutio
    Source Code = https://github.com/sthagen/hyperkuutio

url = https://github.com/sthagen/hyperkuutio
version = 2022.2.19


classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8

install_requires =
    openpyxl >=3.0.10
    pandas >=1.4.3
    pydantic >= 1.10.0
    typer >= 0.6.1

packages = find:

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    hyperkuutio = hyperkuutio.cli:app

[options.extras_require]
dev =
    black
    coverage
    flake8
    hypothesis
    mypy
    pytest
    pytest-cov
    pytest-flake8

[bdist_wheel]
universal = True


[tool:pytest]
testpaths = test
filterwarnings = error

[flake8]
max-line-length = 120
max-complexity = 42
inline-quotes = '
multiline-quotes = """
ignore = E203, W503
[coverage:run]
branch = True
[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py
[isort]
line_length=120
known_first_party=hyperkuutio
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
[mypy]
strict = True
implicit_reexport = True
